fixed contrast issue in sub nav menu

--- a/styles/mtb.css
+++ b/styles/mtb.css
@@ -246,8 +246,8 @@ figcaption {
 
 .sub-nav-menu a:hover {
 	text-decoration: underline;
-	background-color: var(--background);
-	color: var(--text-dark);
+	/*background-color: var(--background);*/
+	/*color: var(--text-dark);*/
     border-radius: 5px;
 }
 
